<resources>
    <string name="app_name">Gymtera</string>
    <string name="gymtera">GYMTERA</string>
    <string name="logo">LOGO</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="deskripsi_auth">Silakan masuk atau daftar akun terlebih dahulu</string>
    <string name="masuk_sebagai_admin">Masuk sebagai <font color="#BFA045">admin</font></string>
    <string name="belum_memiliki_akun_daftar">Belum memiliki akun? <font color="#BFA045">Daftar</font></string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="sudah_memiliki_akun_masuk">Sudah memiliki akun? <font color="#BFA045">Masuk</font></string>
    <string name="daftar">Daftar</string>
    <string name="email_error">Silakan masukkan alamat email ITERA</string>
    <string name="password_error">Jumlah password minimal 8 karakter</string>
    <string name="silahkan_masuk_menggunakan_akun_admin_anda">Silakan masuk menggunakan akun admin Anda</string>
    <string name="masuk_sebagai_pengguna">Masuk sebagai <font color="#BFA045">pengguna</font></string>
    <string name="name_error">Silakan isi nama lengkap Anda</string>
    <string name="ref_url">https://gymtera-94be1-default-rtdb.asia-southeast1.firebasedatabase.app</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="jenis_alat">Jenis Alat</string>
    <string name="pilih_latihan">Pilih Latihan</string>
    <string name="hitung_bmi">Hitung BMI</string>
    <string name="presensi">Presensi</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="height">Tinggi Badan</string>
    <string name="_0cm">0cm</string>
    <string name="weight">Berat Badan</string>
    <string name="_50">0</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="age">Usia</string>
    <string name="_19">0</string>
    <string name="calculate">Hitung</string>
    <string name="cm">cm</string>
    <string name="normal_bmi_range">Rentang BMI normal :</string>
    <string name="_18_5_25_kg_m2">18,5 – 25 kg/m²</string>
    <string name="your_age">Usia Anda :</string>
    <string name="alat_gerakan"><![CDATA[Alat & Gerakan]]></string>
    <string name="nama_alat">Nama Alat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="storage_url">gs://gymtera-94be1.appspot.com</string>
    <string name="kategori">Kategori</string>
    <string name="hapus_latihan">Hapus Latihan</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="jenis_latihan">Jenis Latihan</string>
    <string name="selesai">Selesai</string>
    <string name="sets">Sets :</string>
    <string name="reps">Reps :</string>
    <string name="nama_latihan">Nama Latihan</string>
    <string name="lihat_riwayat_presensi">Lihat riwayat presensi</string>
    <string name="desc_attendance">Sebelum melakukan presensi, harap pastikan bahwa izin lokasi pada perangkat Anda telah diaktifkan dan pastikan juga bahwa Anda berada di lokasi Gym ITERA. Hal ini sangat penting untuk memastikan akurasi presensi dan mematuhi aturan yang berlaku.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="silakan_masukkan_alamat_email_anda">Silakan masukkan alamat email Anda</string>
    <string name="reset_password">Reset Password</string>
    <string name="about">About</string>
    <string name="about_desc">Gym ITERA merupakan sarana yang tersedia bagi seluruh civitas akademika ITERA, termasuk dosen, tenaga kependidikan, dan mahasiswa, yang dapat digunakan tanpa dipungut biaya, aplikasi ini memberikan panduan fitness yang dikembangkan untuk menyediakan petunjuk yang jelas dan terperinci untuk setiap latihan, baik untuk pemula maupun pengguna tingkat lanjut.</string>
    <string name="jumlah_pengunjung_perbulan">Jumlah Pengunjung Perbulan</string>
    <string name="jumlah_pengunjung_pertahun">Jumlah Pengunjung Pertahun</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_jetpack">JetpackActivity</string>
</resources>