<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".user.RegisterActivity">

        <!-- Image -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_auth"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <ImageView
            android:layout_width="196dp"
            android:layout_height="77dp"
            android:layout_below="@id/text2"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-40dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/bg_cloud_left"
            tools:ignore="ContentDescription,ImageContrastCheck,VisualLintBounds" />

        <ImageView
            android:layout_width="117dp"
            android:layout_height="89dp"
            android:layout_below="@id/text2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-25dp"
            android:src="@drawable/bg_cloud_right"
            tools:ignore="ContentDescription,ImageContrastCheck,VisualLintBounds" />

        <ImageView
            android:id="@+id/icLogo"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_clip_auth"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icLogo"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/ft_semibold"
            android:text="@string/lupa_password"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/ft_regular"
            android:text="@string/silakan_masukkan_alamat_email_anda"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="82dp"
            android:layout_marginRight="36dp"
            android:hint="@string/email"
            app:boxStrokeColor="@color/gold"
            app:cursorColor="@color/gold"
            app:endIconMode="clear_text"
            app:errorEnabled="false"
            app:helperTextTextColor="@color/gold"
            app:hintTextColor="@color/gold">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ft_regular"
                android:inputType="text"
                android:textColorHighlight="@color/gold"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="86dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="86dp"
            android:backgroundTint="@color/gold"
            android:enabled="true"
            android:fontFamily="@font/ft_medium"
            android:text="@string/reset_password"
            tools:ignore="VisualLintButtonSize,TextContrastCheck">

        </com.google.android.material.button.MaterialButton>

        <!-- Bottom Text -->
        <TextView
            android:id="@+id/bottom1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_reset"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/ft_regular"
            android:text="@string/masuk_sebagai_admin"
            android:textSize="12sp" />

        <TextView
            android:id="@id/bottom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bottom1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/ft_regular"
            android:text="@string/sudah_memiliki_akun_masuk"
            android:textSize="12sp" />

        <!-- Loading -->
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/loading"
            style="@style/SpinKitView.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            app:SpinKit_Color="@color/gold" />
    </RelativeLayout>
</ScrollView>