<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.features.BMIActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="52dp"
            app:navigationIcon="@drawable/ic_back"
            app:title="Hitung BMI"
            app:titleTextAppearance="@style/Toolbar.SubtitleText" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_male"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-24dp"
        android:layout_marginEnd="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView5"
        app:layout_constraintEnd_toStartOf="@+id/cardView_female"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/maleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:drawablePadding="5sp"
            android:fontFamily="@font/ft_medium"
            android:padding="12dp"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/tint"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_male" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_female"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView_male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/cardView_male"
        app:layout_constraintTop_toTopOf="@+id/cardView_male">

        <TextView
            android:id="@+id/femaleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:drawablePadding="5sp"
            android:fontFamily="@font/ft_medium"
            android:padding="12dp"
            android:text="@string/female"
            android:textAlignment="center"
            android:textColor="@color/tint"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_female" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_male">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ft_medium"
                android:text="@string/height"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/height_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ft_medium"
                android:text="@string/_0cm"
                android:textSize="42sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <SeekBar
                android:id="@+id/Seekbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="300"
                android:progressBackgroundTint="#888994"
                android:progressTint="@color/sec_gold"
                android:thumbTint="@color/gold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toStartOf="@+id/cardView4"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weight_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ft_medium"
                android:text="@string/_50"
                android:textSize="42sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:gravity="center_horizontal">

                <SeekBar
                    android:id="@+id/SeekbarBB"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:max="200"
                    android:progressBackgroundTint="#888994"
                    android:progressTint="@color/sec_gold"
                    android:thumbTint="@color/gold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="@+id/cardView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/age"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ageTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ft_medium"
                android:text="@string/_19"
                android:textSize="42sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:gravity="center_horizontal">

                <SeekBar
                    android:id="@+id/SeekbarAGE"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:max="100"
                    android:progressBackgroundTint="#888994"
                    android:progressTint="@color/sec_gold"
                    android:thumbTint="@color/gold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/gold"
        android:enabled="true"
        android:fontFamily="@font/ft_medium"
        android:text="@string/hitung_bmi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize,TextContrastCheck,DuplicateSpeakableTextCheck">

    </com.google.android.material.button.MaterialButton>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="18dp">

        <!-- Loading -->
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/loading"
            style="@style/SpinKitView.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            app:SpinKit_Color="@color/gold" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>